--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <body>
     <h1>Proyecto Git – Módulo Entornos de Desarrollo</h1>
     <p>Ejercicio examen práctico</p>
+    <p>Cambio alternativo</p>
 </body>
 </html>
