Cambio alternativo pero para soluciar el conflicto otra vez por la modificiacion

--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 
 <body>
     <h1>Proyecto Git – Módulo Entornos de Desarrollo</h1>
+    <p>Cambio alternativo, para evitar el conflicto </p>
     <p>Ejercicio examen práctico</p>
-<<<<<<< HEAD
-    <p>Cambio alternativo</p>
-=======
-    <p>mejora el contenido</p>
->>>>>>> rama-cpm
 </body>
 </html>
